--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "bootstrap": "4.0.0-alpha.6",
+    "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "express": "^4.15.0",
     "immutable": "^4.0.0-rc.1",
