--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.1",
+    "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
