--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-actions": "^2.0.1",
     "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "tether": "^1.4.0"
