--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "immutable": "^4.0.0-rc.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
+    "query-string": "^4.3.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-helmet": "^4.0.0",
@@ -57,6 +58,7 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.3.2",
     "babel-plugin-flow-react-proptypes": "^0.21.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.23.0",
