- YAY! added TESTS! - Added tests with the following concepts   - Snapshot tests to render the app and store the generated picture using enzyme   - Reducer tests   - FIXTURES with action tests     - Where the data is mocked and the action is called. - Deleted: home.js action and reducer. - Added: a checkbox component - Added a background for the homepage that gets toggled by jquery

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prod:start": "heroku local",
     "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
     "test": "yarn lint && flow && jest --coverage",
+    "test:jest": "jest",
     "heroku-postbuild": "yarn prod:build",
     "precommit": "yarn test",
     "prepush": "yarn test && yarn prod:build"
@@ -42,6 +43,7 @@
     "react-router": "4.0.0-beta.7",
     "react-router-dom": "4.0.0-beta.7",
     "react-router-redux": "^4.0.8",
+    "react-select": "^1.0.0-rc.5",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.1",
     "redux-form": "^6.8.0",
@@ -64,6 +66,8 @@
     "babel-preset-react": "^6.23.0",
     "coveralls": "^2.12.0",
     "cross-env": "^3.2.3",
+    "enzyme": "^2.9.0",
+    "enzyme-to-json": "^1.5.1",
     "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-compat": "^1.0.2",
